--- a/WEEK 8/streams/8.4.1.md
+++ b/WEEK 8/streams/8.4.1.md
@@ -16,7 +16,54 @@ public class Test{
 ```
 
 <h3> line by line execution</h3>
+
 ```java
 import java.util.*;
-
 ```
+This line imports the java.util package which provides a collection framework, array-based data structures, event handling, date-time processing, and other utility classes.
+
+```java
+public class Test{
+```
+
+This line starts the definition of a public class called Test.
+
+```java
+static long count=0;
+```
+
+This line declares a static variable count of type long and initializes it to 0.
+
+```java
+public static void main(String[] args){
+```
+
+This line defines the main method, which is the entry point for the Java program. The method takes an array of Strings as an argument.
+
+```java
+var list=new ArrayList<String>();
+```
+
+This line creates a new ArrayList object that can hold String elements, and assigns it to the variable list. The keyword var is used instead of explicitly declaring the type of the variable.
+
+```java
+list.add("Sun");
+list.add("Earth");
+list.add("Moon");
+```
+
+These lines add the String objects "Sun", "Earth", and "Moon" to the ArrayList object list.
+
+```java
+count=list.stream().filter(s->s.length()>3).count();
+```
+
+This line creates a stream from the elements of list, applies a filter operation that only keeps elements with a length greater than 3, and then counts the remaining elements. The result is assigned to the variable count.
+
+```java
+System.out.println(count);
+```
+
+This line prints the value of the variable count to the console.
+
+So the output of the program will be the number of elements in list that have a length greater than 3, which is 2 because "Sun" has length 3 and "Earth" and "Moon" both have length greater than 3. Therefore, the program will output 2.
